@@ -1,3 +1,8 @@
+2014-11-05  Vanessa Gil <vanessa.gil@artica.es>
+	
+	* operation/projects/people_manager.php: Added another
+	way to include users in a task. Ticket #1536.
+
 2014-11-04  Vanessa Gil <vanessa.gil@artica.es>
 	
 	* include/functions_incidents.php
